--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "@mui/icons-material": "^5.0.4",
         "@mui/material": "^5.0.4",
         "@mui/styles": "^5.0.1",
+        "axios": "^0.24.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.4",
