--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/html-webpack-plugin": "^3.2.6",
         "@types/jest": "^26.0.24",
         "@types/react": "^17.0.16",
+        "@types/react-calendar": "^3.9.0",
         "@types/react-dom": "^17.0.9",
         "@types/react-redux": "^7.1.18",
         "@types/react-router-dom": "^5.1.8",
@@ -73,6 +74,7 @@
         "@mui/styles": "^5.0.1",
         "axios": "^0.24.0",
         "react": "^17.0.2",
+        "react-calendar": "^4.0.0",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.4",
         "react-router-dom": "^6.2.1",
