--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "npm run dev",
         "dev": "webpack-dev-server --open --config webpack.dev.ts",
+        "resetup": "npm install --no-package-lock",
         "prebuild": "npm run clean-dist && npm run test",
         "build": "webpack --mode production --config webpack.prod.ts",
         "remove-dist": "rm -rf ./dist/",
@@ -62,7 +63,7 @@
         "ts-loader": "^8.3.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.3.5",
-        "webpack": "^5.49.0",
+        "webpack": "^5.76.1",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.2"
     },
